Restrict flex-shrink for header items on grid view (prevents overlap of elements + forces scrolling). Resolves #4.

--- a/sass/site/header/_header-menu.scss
+++ b/sass/site/header/_header-menu.scss
@@ -190,6 +190,8 @@ button.dropdown-toggle {
 		}
 
 		.main-navigation {
+			flex: 1 0 auto;
+			
 			ul {
 				display: block;
 				padding-top: 2em;
