--- a/style.css
+++ b/style.css
@@ -1428,6 +1428,11 @@ a:hover, a:active {
 			    -ms-flex-pack: start;
 			        justify-content: flex-start;
 		}
+		.site-branding {
+			-webkit-box-flex: 1;
+			    -ms-flex: 1 0 auto;
+			        flex: 1 0 auto;
+		}
 	}
 	@supports (grid-area: auto) {
 		.site-header {
@@ -1602,6 +1607,11 @@ button.dropdown-toggle {
 	@media screen and (min-width: 61.875em) {
 		.menu-toggle {
 			display: none;
+		}
+		.main-navigation {
+			-webkit-box-flex: 1;
+			    -ms-flex: 1 0 auto;
+			        flex: 1 0 auto;
 		}
 		.main-navigation ul {
 			display: block;
